tests/syntax_error/missing_self.jou
class Foo:
    def bar() -> void: # Error: missing self, should be 'def bar(self, ...)'
        return

def main() -> int:
    f = Foo{}
    f.bar()
    return 0
